LastSync attribute for TimelogSetting, ExpanderView for Tasks, insert, update and delete for imported timelog tasks

--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -14,6 +14,36 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
+    <!-- Templates for Expanderview -->
+    <phone:PhoneApplicationPage.Resources>
+        
+        <DataTemplate x:Key="CustomExpanderTemplate">
+            <StackPanel Orientation="Vertical">
+                <TextBlock FontSize="20" Margin="0,0,0,0">
+                    <TextBlock.Text>
+                        <Binding Path="TimelogProjectName" StringFormat="Project: {0}" />
+                    </TextBlock.Text>  
+                </TextBlock>
+            </StackPanel>
+        </DataTemplate>
+        
+        <DataTemplate x:Key="CustomHeaderTemplate">
+            <TextBlock 
+                                        Grid.Column="0"
+                                        Text="{Binding TimelogTaskIdent}"
+                                        FontSize="30"
+                                        Margin="0,0,0,0">
+            </TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="CustomItemTemplate">
+            <StackPanel Orientation="Vertical">
+                <TextBlock FontSize="20" VerticalAlignment="Center" Text="{Binding}"></TextBlock>
+            </StackPanel>
+        </DataTemplate>
+
+    </phone:PhoneApplicationPage.Resources>
+
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -21,7 +51,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <phone:Pivot Grid.Row="0" x:Name="TimelogPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
+        <phone:Pivot Grid.Row="0" x:Name="TimelogPivot" SelectionChanged="TimelogPagePivot_SelectionChanged" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
             <phone:PivotItem x:Name="tlWorktasksForRegister" CacheMode="{x:Null}" Header="worktasks">
                 <Grid x:Name="worktaskContentPanel" Margin="12,0,12,0">
                     <Grid.RowDefinitions>
@@ -29,7 +59,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <TextBlock HorizontalAlignment="Left" Text="worktasks for timelog registration" Grid.Row="0" Grid.Column="0" FontSize="25" Height="33" />
-                    <ListBox x:Name="worktaskListBox" Grid.Row="1" ItemsSource="{Binding TlWorktasks}" Margin="12, 0, 12, 0" >
+                    <ListBox x:Name="worktaskListBox" Grid.Row="1" ItemsSource="{Binding TlWorktaskCollection}" Margin="12, 0, 12, 0" >
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <Grid HorizontalAlignment="Stretch" Width="440">
@@ -50,20 +80,21 @@
             </phone:PivotItem>
             <phone:PivotItem x:Name="tlTasks" CacheMode="{x:Null}" Header="Tl - Tasks">
                 <Grid x:Name="taskContentPanel" Margin="12,0,12,0">
-                    <ListBox x:Name="taskListBox" ItemsSource="{Binding TlTaskCollection}" Margin="12, 0, 12, 0" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Left" Text="{Binding LastSynchronisationTimestamp}" Grid.Row="0" Grid.Column="0" FontSize="25" Height="33" />
+                    <ListBox x:Name="taskListBox" ItemsSource="{Binding TlTaskCollection}" Margin="12, 0, 12, 0"  Grid.Row="1" >
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <Grid HorizontalAlignment="Stretch" Width="440">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <TextBlock 
-                                        Grid.Column="0"
-                                        Text="{Binding TimelogTaskIdent}"
-                                        FontSize="20"
-                                        Margin="0,0,0,0">
-                                    </TextBlock>
-                                </Grid>
+                                <toolkit:ExpanderView Header="{Binding}" Expander="{Binding}"  
+                                    ExpanderTemplate="{StaticResource CustomExpanderTemplate}"
+                                    IsExpanded="{Binding IsExpanded, Mode=TwoWay}" 
+                                    HeaderTemplate="{StaticResource CustomHeaderTemplate}" 
+                                    ItemTemplate="{StaticResource CustomItemTemplate}"
+                                    ItemsSource="{Binding ExpandItems}"
+                                    />
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
@@ -84,9 +115,8 @@
             <TextBlock HorizontalAlignment="Left" Text="{Binding Username}" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" FontSize="25" Height="33" />
             <TextBlock HorizontalAlignment="Left" Text="state:"  Grid.Row="1" Grid.Column="0" FontSize="25" Height="33" />
             <TextBlock HorizontalAlignment="Left" Text="{Binding CurrentState}" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" FontSize="25" Height="33" />
-            <TextBlock HorizontalAlignment="Left" Text="opeartion:"  Grid.Row="2" Grid.Column="0" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="operation:"  Grid.Row="2" Grid.Column="0" FontSize="25" Height="33" />
             <TextBlock HorizontalAlignment="Left" Text="{Binding CurrentOperation}" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" FontSize="25" Height="33" />
         </Grid>
     </Grid>
-
 </phone:PhoneApplicationPage>
