--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -64,14 +64,33 @@
                             <DataTemplate>
                                 <Grid HorizontalAlignment="Stretch" Width="440">
                                     <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="300" />
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock 
-                                        Grid.Column="0"
-                                        Text="{Binding TimelogTaskIdent}"
-                                        FontSize="20"
-                                        Margin="0,0,0,0">
-                                    </TextBlock>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="75"/>
+                                    </Grid.RowDefinitions>
+                                    <Button
+                                            Grid.Column="0" Grid.Row="0"
+                                            Margin="-20,0,0,0"
+                                            BorderThickness="1"
+                                            Content="{Binding Ident_WorkTask}"
+                                            FontSize="20"
+                                            Width="300"
+                                            VerticalAlignment="Center" 
+                                            HorizontalAlignment="Left"
+                                            Click="editWorktaskButton_Click">
+                                    </Button>
+                                    <Button
+                                            Grid.Column="1" Grid.Row="0"
+                                            Margin="-30,0,0,0"
+                                            BorderThickness="0"
+                                            Content="{Binding TotalWorkTimeString}"
+                                            FontSize="20"
+                                            VerticalAlignment="Center" 
+                                            HorizontalAlignment="Left"
+                                            Click="editWorktaskButton_Click">
+                                    </Button>
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
