--- a/TimecardApp/View/TimelogLoginPage.xaml
+++ b/TimecardApp/View/TimelogLoginPage.xaml
@@ -54,7 +54,7 @@
                 <TextBlock Grid.Row="4" Grid.Column="1" Width="300" Text="automatically login" VerticalAlignment="Center" Margin="12,12,12,10"/>
             </Grid>
         </Grid>
-        <Grid  Grid.Row="2" x:Name="InformationGrid" Background="Transparent" >
+        <Grid Margin="12,0,0,0" Grid.Row="2" x:Name="InformationGrid" Background="Transparent" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
