--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -30,7 +30,7 @@
         <DataTemplate x:Key="TlTaskCustomHeaderTemplate">
             <TextBlock 
                                         Grid.Column="0"
-                                        Text="{Binding TimelogTaskIdent}"
+                                        Text="{Binding TimelogTaskName}"
                                         FontSize="30"
                                         Margin="0,0,0,0">
             </TextBlock>
