--- a/TimecardApp/View/WorktaskPage.xaml
+++ b/TimecardApp/View/WorktaskPage.xaml
@@ -110,6 +110,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="12,0,0,0" Text="for Timelog" VerticalAlignment="Center"  Grid.ColumnSpan="2" FontSize="25" Height="33" Visibility="{Binding TimelogActive}"/>
                     <CheckBox Grid.Column="1" Grid.Row="0" x:Name="forTimelogCheckbox" Margin="12,0,0,0" IsChecked="{Binding ForTimelog, Mode=TwoWay}" Visibility="{Binding TimelogActive}"/>
@@ -127,10 +128,14 @@
                             </DataTemplate>
                         </toolkit:ListPicker.FullModeItemTemplate>
                     </toolkit:ListPicker>
-                    <ListBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="30,12,0,0" ItemsSource="{Binding TaskInformation}" Height="120" ItemTemplate="{StaticResource TimelogTaskItemTemplate}"  HorizontalAlignment="Left"   Visibility="{Binding TimelogActive}">
+                    <ListBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="30,12,0,0" ItemsSource="{Binding TaskInformation}" Height="90" ItemTemplate="{StaticResource TimelogTaskItemTemplate}"  HorizontalAlignment="Left"   Visibility="{Binding TimelogActive}">
                     </ListBox>
                     <TextBlock HorizontalAlignment="Left" Margin="12,0,0,0" Text="last timelog registration" VerticalAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" FontSize="25"  Visibility="{Binding TimelogActive}"/>
                     <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" Text="{Binding LastTimelogRegistration}" VerticalAlignment="Center" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" Visibility="{Binding TimelogActive}"/>
+                    <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" BorderThickness="2"    
+                    IsEnabled="{Binding IsResetableForTimelog}" Content="Reset for Timelog upload again"
+                    Click="ResetForTimelogButton_Click"  Margin="0,0,0,0" Visibility="{Binding TimelogActive}">
+                    </Button>
                 </Grid>
             </phone:PivotItem>
         </phone:Pivot>
