Improved timelog handling and improved frontend handling for many worktasks in one week

--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -108,7 +108,7 @@
                                     IsExpanded="{Binding IsExpanded, Mode=TwoWay}" 
                                     HeaderTemplate="{StaticResource WorktaskCustomHeaderTemplate}" 
                                     ItemTemplate="{StaticResource WorktaskCustomItemTemplate}"
-                                    ItemsSource="{Binding ExpandItems}"
+                                    ItemsSource="{Binding ExpandItemsTl}"
                                     />
                                     <Button
                                 Grid.Column="2"
